--- a/src/main/webapp/vet_form.html
+++ b/src/main/webapp/vet_form.html
@@ -13,36 +13,123 @@
 <body>
 
 
-<form action="vet.html">
+<form id="form">
 <div class="form-group">
     <label for="exampleInputEmail1">Email address</label>
-    <input type="email" class="form-control bg-dark" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+    <input name ="email"type="email" class="form-control bg-dark" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
     <small id="emailHelp" class="form-text text-light">We'll never share your email with anyone else.</small>
 </div>
 <div class="form-group">
     <label for="exampleInputPassword1">Password</label>
-    <input type="password" class="form-control bg-dark text-warning" id="exampleInputPassword1" placeholder="Password">
+    <input name="password"type="password" class="form-control bg-dark text-warning" id="exampleInputPassword1" placeholder="Password">
 </div>
 
 
     <div class="form-group">
         <label for="name">Name</label>
-        <input type="text" class="form-control bg-dark text-warning" id="name" placeholder="Name">
+        <input name="name"type="text" class="form-control bg-dark text-warning" id="name" placeholder="Name">
     </div>
 
     <div class="form-group">
-        <label for="address">Adress</label>
-        <input type="text" class="form-control bg-dark text-warning" id="address" placeholder="Ex: Calle 35 20-17">
+        <label for="address">Address</label>
+        <input name="address"type="text" class="form-control bg-dark text-warning" id="address" placeholder="Ex: Calle 35 20-17">
     </div>
 
     <div class="form-group">
         <label for="neighbourhood">Neighbourhood</label>
-        <input type="text" class="form-control bg-dark text-warning" id="neighbourhood" placeholder="Ex: Colombia, China, United States">
+        <input name="neighbourhood"type="text" class="form-control bg-dark text-warning" id="neighbourhood" placeholder="Ex: Colombia, China, United States">
     </div>
 
 
 <button type="submit" class="btn btn-dark" >Submit</button>
 </form>
+<script>
+    var formEl = document.getElementById('form');
+
+    formEl.addEventListener('submit', function(event) {
+
+        var headers = new Headers();
+
+        headers.set('Accept', 'text/plain');
+
+
+        var formData = new FormData();
+        for (var i = 0; i < formEl.length; ++i) {
+            formData.append(formEl[i].name, formEl[i].value);
+        }
+
+        // 2. Make the request
+        // ================================
+        var url = 'http://localhost:8080/ProyectoFinal-backend-1.0-SNAPSHOT/api/app';
+        var fetchOptions = {
+            method: 'PUT',
+            headers,
+            body: formData
+        };
+
+        var responsePromise = fetch(url, fetchOptions);
+
+        // 3. Use the response
+        // ================================
+        responsePromise
+            // 3.1 Convert the response into JSON-JS object.
+            .then(function(response) {
+                return response.json();
+            })
+            // 3.2 Do something with the JSON data
+            .then(function(jsonData) {
+                console.log(jsonData);
+                document.getElementById('results').innerText =
+                    JSON.stringify(jsonData);
+            });
+
+
+        event.preventDefault();
+    });
+
+
+
+
+
+    /*fetch("http://example.com/api/endpoint/", {
+        method: "post",
+        headers: {
+            'Accept': 'application/json',
+            'Content-Type': 'application/json'
+        },
+
+        //make sure to serialize your JSON body
+        body: JSON.stringify({
+            name: myName,
+            password: myPassword
+        })
+    })
+        .then( (response) => {
+            //do something awesome that makes the world a better place
+        });
+
+
+
+
+    var Enter = new enter();
+    addEventListener('name', function (event){
+        event.respondWith(
+            new Response(Enter, {
+                headers: { "Content-Type" : "text/plain" }
+            })
+        );
+    });
+
+    const url ='http://localhost:8080/ProyectoFinal-backend-1.0-SNAPSHOT/api/app'
+    fetch(url,)
+        .then(response => response.json())
+        .then(data=>{
+
+            console.log(data)
+        })
+        .catch(err=>console.log(err))*/
+</script>
+
 
 
 
