--- a/src/main/webapp/vet_form.html
+++ b/src/main/webapp/vet_form.html
@@ -69,8 +69,8 @@
         xhr.onreadystatechange = function() {
 
             if (xhr.readyState == 4 && xhr.status == 201) {
-                console.log("llegue aca");
-
+                alert("Vet was succesfully created")
+                window.location = "Registrarse_InicioSession.html";
             }
 
         }
