--- a/src/main/webapp/Registrarse_InicioSession.html
+++ b/src/main/webapp/Registrarse_InicioSession.html
@@ -28,15 +28,30 @@
 </form>
 <h3>Create User:</h3>
 <form>
-<select class="form-select bg-dark text-light" aria-label="Default select example">
+<select class="form-select bg-dark text-light" aria-label="Default select example" id="seleccionado">
     <option value="1">Owner</option>
     <option value="2">Veterinary</option>
     <option value="3">Official</option>
 </select>
-<button type="submit" class="btn btn-dark">Create</button>
+<button type="submit" class="btn btn-dark" value="crear">Create</button>
 </form>
 
+<script>
 
+    var button = document.getElementById("crear");
+
+    button.addEventListener('click', function (){
+        var seleccionado = document.getElementById("seleccionado").value;
+        if(seleccionado == "1"){
+
+
+        }else if(seleccionado == "2"){
+
+        }else if(seleccionado=="3"){
+
+        }
+    })
+</script>
 
 
 
