--- a/src/main/webapp/Registrarse_InicioSession.html
+++ b/src/main/webapp/Registrarse_InicioSession.html
@@ -27,28 +27,26 @@
     <button type="submit" class="btn btn-dark" >Submit</button>
 </form>
 <h3>Create User:</h3>
-<form>
+
 <select class="form-select bg-dark text-light" aria-label="Default select example" id="seleccionado">
     <option value="1">Owner</option>
     <option value="2">Veterinary</option>
     <option value="3">Official</option>
 </select>
-<button type="submit" class="btn btn-dark" value="crear">Create</button>
-</form>
+<button type="submit" class="btn btn-dark" id="crear">Create</button>
+
 
 <script>
 
     var button = document.getElementById("crear");
-
     button.addEventListener('click', function (){
         var seleccionado = document.getElementById("seleccionado").value;
-        if(seleccionado == "1"){
-
-
-        }else if(seleccionado == "2"){
-
-        }else if(seleccionado=="3"){
-
+        if(seleccionado === "1"){
+            window.location = "owner_form.html";
+        }else if(seleccionado === "2"){
+            window.location = "vet_form.html";
+        }else if(seleccionado ==="3"){
+            window.location = "official_form.html";
         }
     })
 </script>
