--- a/src/main/webapp/Registrarse_InicioSession.html
+++ b/src/main/webapp/Registrarse_InicioSession.html
@@ -13,19 +13,18 @@
 <header > <h5>Welcome to FourPawsCitizens,
     please enter your credentials below:</h5>   </header>
 
-<form action="owner.html">
+
     <div class="form-group">
-        <label for="exampleInputEmail1">Email address</label>
-        <input type="email" class="form-control bg-dark" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-        <small id="emailHelp" class="form-text text-light">We'll never share your email with anyone else.</small>
+        <label for="username">Username</label>
+        <input type="text" class="form-control bg-dark" id="username" aria-describedby="emailHelp" placeholder="Enter username">
     </div>
     <div class="form-group">
-        <label for="exampleInputPassword1">Password</label>
-        <input type="password" class="form-control bg-dark text-warning" id="exampleInputPassword1" placeholder="Password">
+        <label for="password">Password</label>
+        <input type="password" class="form-control bg-dark text-warning" id="password" placeholder="Password">
     </div>
 
-    <button type="submit" class="btn btn-dark" >Submit</button>
-</form>
+    <button type="button" class="btn btn-dark" id="send" >Submit</button>
+
 <h3>Create User:</h3>
 
 <select class="form-select bg-dark text-light" aria-label="Default select example" id="seleccionado">
@@ -49,6 +48,45 @@
             window.location = "official_form.html";
         }
     })
+
+    var submit = document.getElementById("send");
+    submit.addEventListener('click', function (){
+        var username = document.getElementById("username").value
+        var password = document.getElementById("password").value
+
+        var uri = 'http://localhost:8080/ProyectoFinal-backend-1.0-SNAPSHOT/api/app/' + username;
+        var l = btoa(username + ":" + password);
+        var xhr = new XMLHttpRequest();
+
+        xhr.open("GET", uri, true);
+        xhr.setRequestHeader('Authorization','Basic ' + l);
+        xhr.onreadystatechange = function() {
+
+            if (xhr.readyState == 4 && xhr.status == 200) {
+                var role = xhr.responseText.split(" ");
+                role = role[1];
+
+                if(role  === "owner"){
+                    window.location = "owner.html?" + "username=" +username;
+                }else if(role === "vet"){
+                    window.location = "vet.html?" + "username=" +username;
+                }else{
+                    window.location = "official.html?" + "username=" +username;
+                }
+
+
+
+
+            }
+
+        }
+
+
+        xhr.send(null);
+
+
+    })
+
 </script>
 
 
