--- a/src/main/webapp/owner.html
+++ b/src/main/webapp/owner.html
@@ -34,7 +34,7 @@
             </ul>
         </div>
     </nav>
-    <span class="label label-default bg-dark">Your Petsgit </span>
+    <span class="label label-default bg-dark">Your Pets </span>
     <table class="table table-dark table-striped" id="visits">
 
         <thead>
