--- a/src/main/webapp/vet.html
+++ b/src/main/webapp/vet.html
@@ -27,7 +27,7 @@
                 <a class="nav-link" href="#" id="visit">Add a New Visit</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Edit Owner</a>
+                <a class="nav-link" href="#" id="case">Create case</a>
             </li>
 
         </ul>
@@ -115,6 +115,8 @@
 
             var createVisit = document.getElementById("visit")
             createVisit.setAttribute("href" , "visit_form.html?" + "username=" + myParam );
+            var NewCases = document.getElementById("case")
+            NewCases.setAttribute("href" , "PetCase_form.html?" + "username=" + myParam );
 
 </script>
 
