--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -14,7 +14,7 @@
 			<nav>
 				<a href="#" class="activo"></a>
 				<a href="Registrarse_InicioSession.html">Login/check in</a>
-				<a href="PaginaInicio.html">Beginning</a>
+				<a href="index.html">Beginning</a>
 				<a href="#"></a>
 				<a href="#"></a>
 			</nav>
